 * Fixed problem with extra br tags being inserted in project descriptions
 * Fixed table names in the proj_doc_* pages to use variables instead of hardcoded names.
 * Fixed table names in bug_file_add.php3, report_add.php3, view_bug_advanced_page.php3, view_bug_page.php3 to use variables instead of hardcoded names.
 * Fixed a problem with bug updates making the status hard to deal with.
 * Modified the mantis_bug_table.build field to be a VARCHAR(32).
 * Modified the mantis_bug_table.votes field to be an INT(4).
 * Modified the mantis_bug_table.os_build field to a VARCHAR(32).
 * Modified the mantis_user_profile_table.os_build field to a VARCHAR(32).
 * Modified the mantis_user_pref_table.language field to a VARCHAR(32).
 * Modified config_inc.php to properly support all localized langauges.
 * Updated Korean localization.
 * Updated Polish localization.
 * Updated Spanish localization.
 * Updated TROUBLESHOOTING file.
 * Added file_type field to mantis_bug_file_table and mantis_project_file_table.
 * Added LDAP login support.
 * Added ability to limit reporters to see only their bugs.  Security will need to be tightened later.
 * Added a legend for the status colors.

11.04.2001  -   0.15.12

 * Added Swedish localization
 * Added print bugs feature
 * Fixed error where MD5 wasn't actually being used.
 * Fixed problem with the same password being generated over and over.
 * Fixed problem with the same cookie being generated over and over.

10.28.2001  -   0.15.11

 * Modified advanced report's "assign to" drop down to sort alphabetically
 * Modified bug_update script to send emails and behave better
 * Modified file upload size down to 60 to help out page layout in Netscape
 * Modified view_all_bug_page refresh to include f_offset
 * Fixed the post-report forms to redirect properly even if a proxy clears the HTTP_REFERER
 * Added g_use_iis global to workaround an IIS bug with header/Location calls

10.28.2001  -   0.15.10
